[package]
name = "tracing-syslog"
version = "0.1.0"
authors = ["Max Heller <max.a.heller@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/max-heller/tracing-syslog"
description = "syslog backend for `tracing`"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = ["tracing", "syslog"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = "0.2"
tracing-core = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
gag = "1.0"
once_cell = "1.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
