[package]
name = "syslog-tracing"
version = "0.3.0"
authors = ["Max Heller <max.a.heller@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/max-heller/tracing-syslog"
description = "syslog backend for `tracing`"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = ["tracing", "syslog"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = "0.2"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[dev-dependencies]
gag = "1.0"
once_cell = "1.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json"] }
